k8/math-service-application.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: math-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: math-service
  template:
    metadata:
      labels:
        app: math-service
    spec:
      containers:
        - name: math-service
          image: math-service:latest
          imagePullPolicy: Never
