k8/math-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: math-service-service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: math-service
