k8/number-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: number-service-service
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: number-service
