k8/ingress-gateway.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: microservices.info
    http:
      paths:
      - path: /math-service
        backend:
          serviceName: math-service
          servicePort: 8080
      - path: /number-service
        backend:
          serviceName: number-service
          servicePort: 8080
